--- a/app/src/free/AndroidManifest.xml
+++ b/app/src/free/AndroidManifest.xml
@@ -24,7 +24,10 @@
         </activity>
 
         <activity android:name="example.example.com.androidjoketeller.JokeTellerActivity" />
-
+        <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-4592341350894996~9727765410" />
     </application>
 
 
